--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.2",
     "bootstrap-icons": "^1.10.2",
+    "date-fns": "^3.3.1",
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
@@ -26,7 +27,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.7.0",
     "react-chartjs-2": "^5.2.0",
-    "react-datepicker": "^6.1.0",
+    "react-datepicker": "^4.11.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-image-lightbox": "^5.1.4",
