--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-regular": "^5.0.13",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "@heroicons/react": "^1.0.6",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
     "@mui/x-data-grid": "^6.18.4",
@@ -20,6 +21,7 @@
     "bootstrap": "^4.6.2",
     "bootstrap-icons": "^1.10.2",
     "date-fns": "^3.3.1",
+    "heroicons-react": "^1.4.1",
     "jquery": "^3.7.1",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
@@ -36,6 +38,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
+    "react-table": "^7.8.0",
     "react-toastify": "^8.0.0",
     "reactstrap": "^8.9.0",
     "recharts": "^2.5.0",
